@@ -1,0 +1,3 @@
+Add an option to toggle IDLE's cursor blink for shell, editor, and output
+windows.  See Settings, General, Window Preferences, Cursor Blink.
+Patch by Zachary Spytz.
